test/expected/file-cast_x.out
cdecl> cast x into
                  ^
12: syntax error: "as", "into", or "to" expected
